# projekt-group2-university

./: CMakeCache.txt  CMakeLists.txt  Makefile  Projektentwicklung.md  README.md  Requirements.md  a.out  cmake_install.cmake  generator  helpers.c  helpers.cpp  main.c  main.cpp  objects  objects.c  prog
assets/: exams.csv  lecturehalls.csv  students.csv  username.csv
assets/exams/: AMC.csv  BSYS.csv  DSCA.csv  HWSE.csv  KREKO.csv  MACS2.csv  WIFF.csv
headerFiles/: csv-service.h  exam.h  headers.h  helpers.h  lectureHall.h  string.h  string_list.h  student.h
lists/: exam.cpp  lectureHall.cpp  string.cpp  student.cpp
services/: csv-service.c  csv-service.cpp  helpers.cpp
structs/: exam.c  exam.cpp  lectureHall.c  lectureHall.cpp  string.cpp  student.c  student.cpp
test/: createStudent_test.cpp  insertStudentIntoList_test.cpp  main.cpp  readCsvLectureHall_test.cpp  searchStudent_test.cpp
test/csv-service/: readCsvExams_test.cpp  readCsvLectureHall_test.cpp  readCsvStudents_test.cpp
test/exam/: createExamFromString_test.cpp  createExam_test.cpp  printExamList_test.cpp  printExam_test.cpp  searchExam_test.cpp
test/helpers/: checkIDFormat_test.cpp  checkIfFormatMatch_test.cpp  countCharInString_test.cpp  equals_test.cpp  examIsFull_test.cpp  fileExists_test.cpp  getAmountFromWorkload_test.cpp  getMaxStudentsFromLecturehall_test.cpp  integerToString_test.cpp
test/lectureHall/: createLectureHallFromString_test.cpp  createLectureHall_test.cpp  freeLectureHallList_test.cpp  insertIntoLectureHallList_test.cpp  printLectureHall.cpp  printLectureHallList.cpp  printLectureHallList_test.cpp  printLectureHall_test.cpp  searchLectureHall_test.cpp  stringlistToLectureHallList_test.cpp
test/string/: createStringNode_test.cpp  freeStringList_test.cpp  insertIntoStringList.cpp  insertIntoStringList_test.cpp  printStringList.cpp  printStringList_test.cpp  printStringNode.cpp  printStringNode_test.cpp
test/student/: createStudentFromString_test.cpp  createStudent_test.cpp  freeStudentList_test.cpp  insertStudentIntoList_test.cpp  printStudentList_test.cpp  printStudent_test.cpp  searchStudent_test.cpp  stringlistToStudentList_test.cpp
